Adopt .gitignore from PlasmaPy

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,32 @@ var/
 wheels/
 *.egg-info/
 .installed.cfg
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# C extensions
+*.so
+*.a
+
+# Distribution / packaging
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
 *.egg
 
 # PyInstaller
@@ -43,7 +69,7 @@ htmlcov/
 .cache
 nosetests.xml
 coverage.xml
-*.cover
+*,cover
 .hypothesis/
 
 # Translations
@@ -89,7 +115,6 @@ ENV/
 
 # Spyder project settings
 .spyderproject
-.spyproject
 
 # Rope project settings
 .ropeproject
@@ -97,5 +122,11 @@ ENV/
 # mkdocs documentation
 /site
 
-# mypy
-.mypy_cache/
+# Auxiliary files associated with emacs
+*#
+*~
+*.#
+.#*
+
+# Auxilliary files associated with vim
+*.swp
