--- a/.gitignore
+++ b/.gitignore
@@ -5,31 +5,6 @@ __pycache__/
 
 # C extensions
 *.so
-
-# Distribution / packaging
-.Python
-env/
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
-
-# C extensions
-*.so
 *.a
 
 # Distribution / packaging
@@ -130,3 +105,11 @@ ENV/
 
 # Auxilliary files associated with vim
 *.swp
+VIRTUAL/
+
+# Miscellaneous files
+.idea/
+Untitled*
+untitled*
+*debuglog*
+.DS_Store
